--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/materialize.min.css" rel="stylesheet" type="text/css">
+<link href="css/menu.css" rel="stylesheet" type="text/css">
 
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
@@ -24,33 +25,48 @@
 
   // Initialize collapse button
   $(".button-collapse").sideNav();
-  // Initialize collapsible (uncomment the line below if you use the dropdown variation)
-  //$('.collapsible').collapsible();
-
 
   (function($){
     $(function(){
       $('.button-collapse').sideNav();
     }); // end of document ready
-  })(jQuery); // end of jQuery name space
+  })(jQuery); // end of jQuery namespace
 </script>
 </head>
 <body>
   <ul id="slide-out" class="side-nav">
-    <li><div class="user-view">
-      <div class="background">
-        <img src="images/office.jpg">
-      </div>
-      <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#!name"><span class="white-text name">John Doe</span></a>
-      <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-    </div></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-    <li><a href="#!">Second Link</a></li>
-    <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-</ul>
-  <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+    <li>
+      <div class="menu-top-section"></div>
+    </li>
+    <li>
+      <a class="waves-effect "href="admin-console.html">
+        <i class="material-icons">AC</i>
+        Admin Console
+      </a>
+    </li>
+    <li>
+      <a class="waves-effect" href="company-specifics.html">
+        <i class="material-icons">CS</i>
+        Company Specifics
+      </a>
+    </li>
+    <li>
+        <div class="divider"></div>
+    </li>
+    <li>
+      <a class="waves-effect" href="about.html">
+        <i class="material-icons">A</i>
+        About
+      </a>
+    </li>
+  </ul>
+  <div>
+    <a id="sidebar" href="" data-activates="slide-out" class="button-collapse"></a>
+  </div>
+
+  <!-- Admin Console main section -->
+  <div>
+
+  </div>
 </body>
 </html>
