Added component and setting lists to Admin Console page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/materialize.min.css" rel="stylesheet" type="text/css">
 <link href="css/menu.css" rel="stylesheet" type="text/css">
+<link href="css/admin-console.css" rel="stylesheet" type="text/css">
 
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
@@ -65,8 +66,22 @@
   </div>
 
   <!-- Admin Console main section -->
-  <div>
-
+  <div class="admin-console-main">
+    <div><h3>Admin Console</h3></div>
+    <div class="admin-console-left">
+      <div><h5>Services</h5></div>
+      <ul class="service-list">
+        <li>Edgar Crawler</li>
+        <li>News Crawler</li>
+      </ul>
+      <div><h5>Settings</h5></div>
+      <ul class="setting-list">
+        <li>Subscription</li>
+        <li>Notification</li>
+      </ul>
+    </div>
+    <div class="admin-console-right">
+    </div>
   </div>
 </body>
 </html>
