--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="refresh" content="3; URL=index.html">
 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/materialize.min.css" rel="stylesheet" type="text/css">
@@ -61,26 +62,28 @@
       </a>
     </li>
   </ul>
-  <div>
-    <a id="sidebar" href="" data-activates="slide-out" class="button-collapse"></a>
-  </div>
+  <a id="sidebar" href="" data-activates="slide-out" class="button-collapse"></a>
 
   <!-- Admin Console main section -->
   <div class="admin-console-main">
-    <div><h3>Admin Console</h3></div>
+    <div class="admin-console-top">
+      <h3>Admin Console</h3>
+    </div>
     <div class="admin-console-left">
-      <div><h5>Services</h5></div>
       <ul class="service-list">
+        <li class="list-header">Services</li>
         <li>Edgar Crawler</li>
         <li>News Crawler</li>
       </ul>
-      <div><h5>Settings</h5></div>
       <ul class="setting-list">
+        <li class="list-header">Settings</li>
         <li>Subscription</li>
         <li>Notification</li>
       </ul>
     </div>
+    <div class="admin-console-middle"></div>
     <div class="admin-console-right">
+      whatever
     </div>
   </div>
 </body>
