Added coming-soon page. Added Edgar setting items.

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
       <div class="menu-top-section"></div>
     </li>
     <li>
-      <a class="waves-effect "href="admin-console.html">
+      <!--a class="waves-effect "href="admin-console.html"-->
+      <a class="waves-effect "href="coming-soon.html">
         <i class="material-icons">AC</i>
         Admin Console
       </a>
     </li>
     <li>
-      <a class="waves-effect" href="company-specifics.html">
+      <!--a class="waves-effect" href="company-specifics.html"-->
+      <a class="waves-effect" href="coming-soon.html">
         <i class="material-icons">CS</i>
         Company Specifics
       </a>
@@ -56,7 +58,8 @@
         <div class="divider"></div>
     </li>
     <li>
-      <a class="waves-effect" href="about.html">
+      <!--a class="waves-effect" href="about.html"-->
+      <a class="waves-effect" href="coming-soon.html">
         <i class="material-icons">A</i>
         About
       </a>
@@ -78,12 +81,34 @@
       <ul class="setting-list">
         <li class="list-header">Settings</li>
         <li>Subscription</li>
-        <li>Notification</li>
+        <li>Email</li>
       </ul>
     </div>
-    <div class="admin-console-middle"></div>
-    <div class="admin-console-right">
-      whatever
+    <div class="admin-console-right" id="edgar-service">
+        <div class="edgar-service-item">
+          <h5><b>Action</b></h5>
+          <p>Stop, Start, Refresh</p>
+        </div>
+        <div class="edgar-service-item">
+          <h5><b>Status</b></h5>
+          running, not running
+        </div>
+        <div class="edgar-service-item">
+          <h5><b>Crawl frequency</b></h5>
+          0.5h ~ 24h
+        </div>
+        <div class="edgar-service-item">
+          <h5><b>Notification</b></h5>
+          immediate, every day: when
+        </div>
+        <div class="edgar-service-item">
+          <h5><b>heartbeat</b></h5>
+          disabled, enabled: frequency: 24h ~ 1w
+        </div>
+        <div class="edgar-service-item-last">
+          <h5><b>Log</b></h5>
+          text field
+        </div>
     </div>
   </div>
 </body>
